# libjstl

./: CMakeLists.txt  README.md  package.json
include/: jstl.h
test/: CMakeLists.txt  add-deferred-teardown-callback-finish.cc  add-deferred-teardown-callback.cc  add-teardown-callback-remove-with-data.cc  add-teardown-callback-remove.cc  add-teardown-callback-with-data.cc  add-teardown-callback.cc  create-external-arraybuffer-with-finalizer-detach.cc  create-external-arraybuffer-with-finalizer.cc  create-function-return-arraybuffer-span.cc  create-function-return-arraybuffer.cc  create-function-return-bigint64.cc  create-function-return-biguint64.cc  create-function-return-shared-ptr.cc  create-function-return-string.cc  create-function-return-uint16array-any.cc  create-function-return-uint16array-span.cc  create-function-return-uint16array-typedarray-span-any.cc  create-function-return-uint16array-typedarray-span.cc  create-function-return-uint32-arg-int32-int32.cc  create-function-return-uint64.cc  create-function-return-uint8array-any.cc  create-function-return-uint8array-span.cc  create-function-return-uint8array-typedarray-span-any.cc  create-function-return-uint8array-typedarray-span.cc  create-function-return-unique-ptr.cc  create-function-return-void-arg-arraybuffer-span-of-struct-dynamic.cc  create-function-return-void-arg-arraybuffer-span-of-struct.cc  create-function-return-void-arg-arraybuffer-span.cc  create-function-return-void-arg-arraybuffer.cc  create-function-return-void-arg-bigint64.cc  create-function-return-void-arg-biguint64.cc  create-function-return-void-arg-intptr.cc  create-function-return-void-arg-multiple.cc  create-function-return-void-arg-optional-string.cc  create-function-return-void-arg-pointer.cc  create-function-return-void-arg-shared-ptr.cc  create-function-return-void-arg-string.cc  create-function-return-void-arg-tuple-int32-string.cc  create-function-return-void-arg-tuple-int32.cc  (+29 more)
